--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Images.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Images.cshtml
@@ -1,8 +1,8 @@
-﻿@using Mindbite.Core.Mox
+﻿@using Mindbite.Mox.Extensions
 @{
     Layout = this.Context.Request.IsAjaxRequest() ? "" : "Mox/_Layout";
 }
-@model Mindbite.Core.Mox.DesignDemoApp.ViewModels.ImagesViewModel
+@model Mindbite.Mox.DesignDemoApp.ViewModels.ImagesViewModel
 
 @if (!this.Context.Request.IsAjaxRequest())
 {
