--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/_DisplayMenu.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/_DisplayMenu.cshtml
@@ -1,7 +1,7 @@
-﻿@using Mindbite.Core.Mox.UI
+﻿@using Mindbite.Mox.UI
 @{
     var routeValues = new { id = ViewContext.RouteData.Values["Id"] };
-    var menu = Mindbite.Core.Mox.UI.Menus.Menu
+    var menu = Mindbite.Mox.UI.Menus.Menu
         .Create()
         .Items(items =>
         {
