--- a/src/Mindbite.Mox.Core/Views/Shared/Components/Mox/AppHeaderPartials/Default.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Components/Mox/AppHeaderPartials/Default.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Mindbite.Core.Mox.Configuration.Apps.AppPartial>
+﻿@model IEnumerable<Mindbite.Mox.Configuration.Apps.AppPartial>
 
 @if (Model.Any())
 {
