--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_Scripts.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_Scripts.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Microsoft.Extensions.Options.IOptions<Mindbite.Core.Mox.Configuration.StaticIncludes.IncludeConfig> Config
+﻿@inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.StaticIncludes.IncludeConfig> Config
 
 @foreach (var script in Config.Value.Scripts)
 {
