--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/UI/AppBreadCrumbs.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/UI/AppBreadCrumbs.cshtml
@@ -1,11 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Controllers
-@using Mindbite.Core.Mox.UI.Menus
-@using Mindbite.Core.Mox
+@using Mindbite.Mox.UI.Menus
+@using Mindbite.Mox.Extensions
 @using System.Reflection
 @using System.Linq
 @using Microsoft.Extensions.Localization;
-@using Mindbite.Core.Mox.UI
-@inject Microsoft.Extensions.Options.IOptions<Mindbite.Core.Mox.Configuration.Config> Config
+@using Mindbite.Mox.UI
+@inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.Config> Config
 @inject IStringLocalizer localizer
 
 @{
