--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/_Layout.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/_Layout.cshtml
@@ -1,10 +1,10 @@
-﻿@using Mindbite.Core.Mox.ViewComponents
-@using Mindbite.Core.Mox
-@using Mindbite.Core.Mox.UI.Menus
-@using Mindbite.Core.Mox.UI
+﻿@using Mindbite.Mox.ViewComponents
+@using Mindbite.Mox
+@using Mindbite.Mox.UI.Menus
+@using Mindbite.Mox.UI
 @using Microsoft.Extensions.Localization;
 
-@inject Microsoft.Extensions.Options.IOptions<Mindbite.Core.Mox.Configuration.Config> Config
+@inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.Config> Config
 @inject IStringLocalizer localizer
 
 @{
