--- a/src/Mindbite.Mox.Identity/Views/ForgotPassword/Email/Reset.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/ForgotPassword/Email/Reset.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.Extensions.Localization;
 
-@model Mindbite.Core.Mox.Identity.Data.Models.PasswordReset
+@model Mindbite.Mox.Identity.Data.Models.PasswordReset
 @inject IStringLocalizer localizer
 
 <h2>@localizer["Återställ lösenord"]</h2>
