--- a/src/Mindbite.Mox.Identity/Views/ForgotPassword/Index.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/ForgotPassword/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.Extensions.Localization;
 
-@model Mindbite.Core.Mox.Identity.ViewModels.AccountViewModel.ForgotPasswordViewModel
+@model Mindbite.Mox.Identity.ViewModels.AccountViewModel.ForgotPasswordViewModel
 @inject IStringLocalizer localizer
 
 @{
