--- a/src/Mindbite.Mox.Identity/Views/LogIn/Index.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/LogIn/Index.cshtml
@@ -2,7 +2,7 @@
 @{
     Layout = "Mox/LogIn/_Layout";
 }
-@model Mindbite.Core.Mox.Identity.ViewModels.AccountViewModel.LogInViewModel
+@model Mindbite.Mox.Identity.ViewModels.AccountViewModel.LogInViewModel
 @inject IStringLocalizer localizer
 
 @using (Html.BeginForm())
