--- a/src/Mindbite.Mox.Identity/Views/Shared/Mox/Identity/_Header.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/Shared/Mox/Identity/_Header.cshtml
@@ -1,9 +1,9 @@
 ﻿@using Microsoft.EntityFrameworkCore;
 @using System.Security.Claims;
-@using Mindbite.Core.Mox.Identity.Data
+@using Mindbite.Mox.Identity.Data
 @using Microsoft.Extensions.Localization;
 
-@inject Mindbite.Core.Mox.Services.IDbContextFetcher dbContextFetcher
+@inject Mindbite.Mox.Services.IDbContextFetcher dbContextFetcher
 @inject IStringLocalizer localizer
 
 @{
