--- a/src/Examples/Mindbite.Mox.NotificationCenter/Areas/NotificationCenter/Views/Subscriptions/Index.cshtml
+++ b/src/Examples/Mindbite.Mox.NotificationCenter/Areas/NotificationCenter/Views/Subscriptions/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Linq;
 @using Microsoft.EntityFrameworkCore;
-@model Mindbite.Core.Mox.UI.IDataTable
+@model Mindbite.Mox.UI.IDataTable
 @{
     Layout = "Mox/_Layout";
 }
