--- a/src/Mindbite.Mox.Core/Views/Shared/Components/Mox/AppsNavigation/Default.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Components/Mox/AppsNavigation/Default.cshtml
@@ -1,15 +1,15 @@
 ﻿@using System.Linq
-@using Mindbite.Core.Mox
-@using Mindbite.Core.Mox.ViewModels
+@using Mindbite.Mox.Extensions
+@using Mindbite.Mox.ViewModels
 @model AppsNavigationViewModel
 
 @if (Model.Config.Apps.Any(x => x.CanViewWithRoles(Model.Roles)))
 {
     <h4 class="menu-heading">Appar</h4>
     <ul class="mox-apps-menu">
-        @foreach (var app in Model.Config.Apps.Where(x => x.CanViewWithRoles(Model.Roles)).Where(x => ((Mindbite.Core.Mox.UI.Menus.IMenu)x.Menu).Items.Any()))
+        @foreach (var app in Model.Config.Apps.Where(x => x.CanViewWithRoles(Model.Roles)).Where(x => ((Mindbite.Mox.UI.Menus.IMenu)x.Menu).Items.Any()))
         {
-            <li class="menu-item @(app == Model.App ? "selected" : "")"><a href="@Url.Action(app)">@app.Name</a></li>
+            <li class="menu-item @(app == Model.App ? "selected" : "")"><a href="@Url.AppAction(app, Model.Roles)">@app.Name</a></li>
         }
     </ul>
 }
