--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppScripts.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppScripts.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Microsoft.Extensions.Options.IOptions<Mindbite.Core.Mox.Configuration.Config> Config
+﻿@inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.Config> Config
 
 @foreach (var script in Config.Value.Apps.SelectMany(x => x.StaticIncludes.Scripts))
 {
