--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Create.cshtml
@@ -1,9 +1,9 @@
-﻿@using Mindbite.Core.Mox
+﻿@using Mindbite.Mox.Extensions
 @using Microsoft.Extensions.Localization;
 @{
     Layout = "Mox/_Layout";
 }
-@model Mindbite.Core.Mox.Identity.ViewModels.CreateUserViewModel
+@model Mindbite.Mox.Identity.ViewModels.CreateUserViewModel
 @inject IStringLocalizer localizer
 
 @Html.Partial("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
