--- a/src/Mindbite.Mox.Identity/Views/ForgotPassword/Reset.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/ForgotPassword/Reset.cshtml
@@ -4,7 +4,7 @@
     Layout = "Mox/LogIn/_Layout";
 }
 
-@model Mindbite.Core.Mox.Identity.ViewModels.AccountViewModel.ResetViewModel
+@model Mindbite.Mox.Identity.ViewModels.AccountViewModel.ResetViewModel
 @inject IStringLocalizer localizer
 
 @using (Html.BeginForm("Reset", "ForgotPassword"))
