--- a/src/Mindbite.Mox.Identity/Views/Shared/Mox/LogIn/_Layout.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/Shared/Mox/LogIn/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Microsoft.Extensions.Options.IOptions<Mindbite.Core.Mox.Configuration.Config> Config
+﻿@inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.Config> Config
 
 <!DOCTYPE html>
 
