--- a/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
@@ -1,4 +1,5 @@
 ﻿html, body { margin: 0; height: 100%; overflow: hidden; background-color: #fff; color: #24292e; position: relative; padding: 0; font-size: 14px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+body { display: flex; flex-direction: column; }
 input, textarea, select, button { font-size: 1rem; line-height: 1.5em; color: #24292e; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 input[type=button], input[type=submit], button { line-height: 1.2em; }
 
@@ -66,17 +67,17 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-header-dropdown-item a { display: block; padding: 5px 10px; color: #24292e; text-decoration: none; }
 .mox-header-dropdown-item a:hover { background-color: #f5f5f8; }
 
-.mox-content-wrapper { position: relative; height: calc(100% - 40px); }
+.mox-content-wrapper { position: relative; height: calc(100% - 40px); display: flex; flex-direction: row; overflow: hidden; }
 .mox-content-wrapper.mox-with-side-menu { }
 .mox-content { background-color: #fff; margin: 0; padding: 25px 25px; padding-bottom: 200px; }
-.mox-content-scroll-wrapper { height: 100%; overflow: auto; -webkit-overflow-scrolling: touch; }
+.mox-content-scroll-wrapper { height: 100%; overflow: auto; -webkit-overflow-scrolling: touch; flex: 1; }
 
 .mox-content input[type=checkbox] { width: 16px; height: 16px; padding: 0; margin:0; vertical-align: middle; position: relative; top: -1px; }
 .mox-content h2:not(:first-of-type) { border-top: 1px solid #eee; padding-top: 8px; margin-top: 30px; }
 
 .mox-content form { max-width: 960px; }
 
-.mox-content article { max-width: 960px; }
+.mox-content article { max-width: 550px; }
 .mox-content article :first-child h1:first-of-type,
 .mox-content article > h1:first-of-type { margin-top: 1.5rem; }
 .mox-content article h1 { margin-bottom: 1rem; }
@@ -214,6 +215,9 @@ h4, h5, h6 { font-size: 1rem; }
 .mox-modal-content { overflow-y: auto; box-sizing: border-box; }
 .mox-modal-content.mox-content { padding-bottom: 16px; background-color: unset; }
 .mox-modal-content.mox-content h1 { margin-top: 0; }
+
+.mox-editor-side { position: static; transition: 0; }
+.mox-editor-side .mox-modal-wrapper { margin: 0; max-width: unset; box-shadow: unset; overflow: unset; transition: unset; }
 
 .mox-modal.hidden { opacity: 0; }
 
