Extend the user settings form with your own tabs and forms.

--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/_DisplayMenu.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/_DisplayMenu.cshtml
@@ -7,7 +7,7 @@
         {
             items.Add().Title("Design").Action("Designs", "Display", routeValues);
             items.Add().Title("Bilder").Action("Designs", "Images", routeValues);
-            items.Add().Title("Kommentarer").Action("Designs", "Comments", routeValues);
+            //items.Add().Title("Kommentarer").Action("Designs", "Comments", routeValues);
         });
 }
 
