--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Index.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Index.cshtml
@@ -14,4 +14,4 @@
     @Html.ActionLink(localizer["Skapa ny"], "Create", null, null, new { @class = "mox-button" })
 </p>
 
-@await Html.PartialAsync("Mox/DataTable", Model)
+@await Html.PartialAsync("Mox/UI/DataTable", Model)
