--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Index.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Index.cshtml
@@ -13,7 +13,7 @@
     @Html.ActionLink("Skapa ny", "Create", null, null, new { @class = "mox-button", onclick = "openModalForm(this, event)" })
 </p>
 
-@await Html.PartialAsync("Mox/DataTable", Model)
+@await Html.PartialAsync("Mox/UI/DataTable", Model)
 
 @* Hämta listan med ajax!
     <script>
