--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppFiles.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppFiles.cshtml
@@ -5,8 +5,8 @@
 
 @foreach (var include in Config.Value.Apps.Select(x => x.StaticIncludes))
 {
-    @foreach (var style in include.Styles)
+    @foreach (var style in include.Files)
     {
-        @(style.Render(include.StaticRoot, StaticFileProviderOptions.Value.FileProviders, env.IsDevelopment() ? Mindbite.Mox.Configuration.StaticIncludes.FileVersionHash.FileHash : Mindbite.Mox.Configuration.StaticIncludes.FileVersionHash.FileHash))
+        @(style.Render(include.StaticRoot, StaticFileProviderOptions.Value.FileProviders, Mindbite.Mox.Configuration.StaticIncludes.FileVersionHash.FileHash))
     }
 }
