--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/RoleManagement/Index.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/RoleManagement/Index.cshtml
@@ -10,4 +10,4 @@
 
 <h1>@localizer["Behörigheter"]</h1>
 
-@await Html.PartialAsync("Mox/DataTable", Model)
+@await Html.PartialAsync("Mox/UI/DataTable", Model)
