--- a/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/css/base.css
@@ -158,6 +158,11 @@ h4, h5, h6 { font-size: 1rem; }
     FORMS
 ***************************************************************/
 
+.mox-message { border-radius: 3px; padding: 10px 20px; padding-left: 20px; border: 1px solid #94b6af; border-left: 5px solid #20bea1; background-image: url('/static/mox/svg/message-check.svg'); background-size: 24px; background-position: 14px center; background-repeat: no-repeat; padding-left: 55px; }
+.mox-message p { margin: 0; }
+
+.validation-summary-errors { background-color: #faa; border-radius: 3px; padding: 10px 20px; }
+.validation-summary-errors ul { list-style: none; padding: 0; margin: 0; }
 .field-validation-error { color: #f33; }
 
 .mox-content fieldset { border: 0; padding: 0; margin-bottom: 15px; }
